<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_gravity="center"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.framgment.MainMenu">

    <!-- Container for both rows -->
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/background_icon"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Row 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:background="@drawable/background_icon1"
                android:text="@string/note"
                android:padding="8dp"
                android:textStyle="bold"
                android:drawableStart="@drawable/add_notes"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:textSize="12sp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:padding="8dp"
                android:text="@string/task"
                android:textStyle="bold"
                android:background="@drawable/background_icon1"
                android:drawableStart="@drawable/extract_icon"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:textSize="12sp"/>
        </LinearLayout>

        <!-- Row 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:padding="8dp"
                android:textStyle="bold"
                android:text="@string/reminders"
                android:background="@drawable/background_icon1"
                android:drawableStart="@drawable/reminder_icon"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:textSize="12sp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:padding="8dp"
                android:textStyle="bold"
                android:text="@string/insights"
                android:background="@drawable/background_icon1"
                android:drawableStart="@drawable/insights_con"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:textSize="12sp"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>